# ps-utils

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_gpu.txt
data/: bunny_sdf.npy  bunny_voxels.npy
demos/: drag_viewer.py  gizmo_viewer.py  gl_viewer.py  ui_viewer.py
examples/: drag_viewer.py  gizmo_viewer.py  gl_viewer.py  sdf_viewer.py  training_viewer.py  ui_viewer.py  voxelset_viewer.py
examples/utils/: sdf.py  voxelize.py
src/ps_utils/structures/: __init__.py  bbox.py  voxel_set.py
src/ps_utils/ui/: __init__.py  alert_handler.py  buttons.py  enum_utils.py  image_utils.py  key_handler.py  map_utils.py  save_utils.py  sliders.py
src/ps_utils/viewer/: base_viewer.py  gizmo.py
