[project]
authors = [{ name = "Clément Jambon", email = "cjambon@mit.edu" }]
name = "ps_utils"
version = "0.0.1"
description = "Utils for Polyscope"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
